# sundials

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
src/: check.rs  context.rs  ida.rs  kin.rs  kinsol.rs  kinsol_tests.rs  lib.rs  nvector.rs  sunlinsol.rs  sunlinsol_faer.rs  sunlinsol_klu2.rs  sunlinsol_spsolve.rs  sunmatrix.rs  vector.rs
