[package]
name = "sundials"
version = "0.2.0"
description = "Suite of nonlinear and differential/algebraic equation solvers"
license = "BSD-3-Clause"
edition = "2021"
repository = "https://github.com/rwl/sundials"

[dependencies]
anyhow = "1"
sundials-sys = { version = "0.5.1", features = ["build_libraries", "static_libraries"] }
faer = { version = "0.19", optional = true }

[features]
default = ["faer"]
klu = ["sundials-sys/klu"]