[package]
name = "sundials"
version = "0.3.1"
description = "Suite of nonlinear and differential/algebraic equation solvers"
license = "BSD-3-Clause"
edition = "2021"
repository = "https://github.com/rwl/sundials"

[dependencies]
anyhow = "1"
sundials-sys = { version = "0.6" }
faer = { version = "0.22", optional = true }

[features]
default = ["faer"]
build_sundials = ["sundials-sys/build_libraries"]
static_sundials = ["sundials-sys/static_libraries"]
klu = ["sundials-sys/klu"]