[package]
name = "sundials"
version = "0.4.0"
description = "Suite of nonlinear and differential/algebraic equation solvers"
license = "BSD-3-Clause"
edition = "2021"
repository = "https://github.com/rwl/sundials"

[dependencies]
anyhow = "1"
sundials-sys = { version = "0.6" }
faer = { version = "0.22", optional = true }
suitesparse_sys = { version = "0.1.4", features = ["klu"], optional = true }

[features]
default = ["faer"]
build_sundials = ["sundials-sys/build_libraries"]
static_sundials = ["sundials-sys/static_libraries"]
klu = ["sundials-sys/klu"]
klu2 = ["suitesparse_sys"]
suitesparse_vendor = ["suitesparse_sys/build_vendor"]
